tests/sksl/errors/golden/SwizzleMatrix.glsl
### Compilation failed:

error: 3: cannot swizzle value of type 'float2x2'
1 error
